# wtqt

./: CMakeLists.txt  cabrow.cpp  cabrow.h  main.cpp  wtqt.pro
cmake/modules/: GetGitVersion.cmake
